wrap btn-more to fix firefox problem

--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -48,4 +48,5 @@ img[src$=svg]{
 
 .btn-more{
     position: relative;
+    display: inline-block;
 }
